安装anaconda、git、nodejs、hexo

--- a/虚拟机.md
+++ b/虚拟机.md
@@ -29,8 +29,76 @@
 * 可以用Unity Tweak Tool在Unity-Launcher-Minimise中设置(成功)
 * 在安全和隐私中开启Dash在线搜索功能，关闭向 Canonical 发送错误报告。
 * 安装Google Chrome(集成flash)，下载64位deb包`wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb`，安装命令`sudo dpkg -i google-chrome-stable_current_amd64.deb`
+* 卸载Chrome `sudo apt-get remove google-chrome-stable`
 * 提示依赖关系问题-仍未被配置，`sudo apt-get install -f`重新分析，再执行安装命令没报错。
 * 分析：第一次的时候也可以启动Chrome但图标不对，第二次就对了，不知道是什么问题。
 * 安装清理工具bleachbit，在软件中可以找到。
 * 安装搜狗输入法，下载sogoupinyin_xxxx.deb,双击安装不了，用安装命令`sudo dpkg -i xxxx.deb`,会出现和Chrome同样的问题，解决方法同。
-## 
+## 安装wewechat
+* [wewechat](https://github.com/trazyn/weweChat)只提供源码包
+* linux上有[三种](http://www.cnblogs.com/xwdreamer/p/3623454.html)安装方法，我们需要源代码安装。
+* `sudo apt-get install build-essential`
+* 安装步骤：配置-编译-安装
+* [下载](https://github.com/trazyn/weweChat/releases)[weweChat-1.1.4.tar.gz](https://codeload.github.com/trazyn/weweChat/tar.gz/v1.1.4)建议使用迅雷下载
+* 解压缩`tar -zxf weweChat-1.1.4.tar.gz`
+* 进入目录`cd weweChat-1.1.4`
+* 配置`./configure --prefix=/usr/local/weweChat`
+* 编译`make all`
+* 安装 `make install && make install-init && make install-commandmode && make install-config`
+* **以上为臆想**
+* 直接下载wewechat-1.1.4-x86_64.AppImage，右键运行。
+## [安装]QQ、迅雷(https://yiqiao.me/2017/09/11/ubuntu-16-04-lts-qq/)
+## 安装[ieaseMusic](https://github.com/trazyn/ieaseMusic
+## 机器学习实战Ubuntu环境搭建 [慕课网](http://www.imooc.com/article/18123)
+* 下载[anaconda](https://pan.baidu.com/s/1hs1LF0K)
+* 开始安装，进入目录执行命令`bash Anaconda2-4.3.1-Linux-x86_64.sh`，next
+* 添加conda命令到环境变量~//bashrc `export PATH="/home/你当前登录用户的用户名(jerry)/anaconda2/bin:$PATH"`
+* 更换清华官方源
+```
+conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/ 
+conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/
+conda config --set show_channel_urls yes
+```
+* 删除默认的源`sudo vim ~/.condarc`，vim没用？用vi，删除- defaults 这一行。
+* 更新conda `conda update conda`
+* 查看Python和anaconda版本 `python` 退出`exit()` 2.7.13和4.3.1
+* 创建虚拟环境 `conda create -n gl-env python=2.7.13 anaconda=4.3.1`
+* 切换到gl-env虚拟环境(名字在上一步可以改) `source activate gl-env`，退出是`source deactivate`
+* 安装GraphLab-Create，先[申请秘钥](https://turi.com/download/academic.html)得到email和key。
+* `(gl-env) pip install --upgrade --no-cache-dir https://get.graphlab.com/GraphLab-Create/2.1/zjzsgs@hotmail.com/D8D8-71C4-5C87-3C54-D975-1AB6-70EF-A52B/GraphLab-Create-License.tar.gz`
+* 安装ipython-notebook `(gl-env) conda install ipython-notebook` 
+* 进入ipython交互界面，`ipython`
+* import graphlab
+* graphlab.__VERSION__
+## [安装git](http://www.imooc.com/article/17945)
+* `sudo apt install git`
+* `git --version`
+* `git config --global user.name "username"`
+* `git config --global user.email "youremail"`
+## 安装nodejs
+* 安装nodejs `sudo apt install nodejs`
+* 安装npm `sudo apt install npm`
+* ubuntu原有node库，所以安装Node.js默认叫nodejs，执行npm命令会报错`/usr/bin/env: "node": 没有那个文件或目录`
+* 解决办法：`sudo ln -s /usr/bin/nodejs /usr/bin/node`创建二者之间的符号链接
+* 升级npm `sudo npm install npm -g`
+* 还是会出现nodejs版本低的问题，[解决办法](http://blog.csdn.net/lss_csdn/article/details/52165652)如下
+	* 在 Github 上获取 Node.js 源码：`sudo git clone https://github.com/nodejs/node.git`
+	* 修改目录权限：`sudo chmod -R 755 node`
+	* 进入node目录：`cd node`
+	* 使用 ./configure 创建编译文件：`sudo ./configure`
+	* `sudo make`(等)`sudo make install`
+	* 查看版本：`node -v`
+	* 安装n模块，用来管理nodejs版本 `sudo npm install -g n`
+	* 升级node.js到最新稳定版 `sudo n stable`
+	* 升级npm `sudo npm install npm -g`
+* 使用npm安装模块 `npm install module_name`
+* 安装hexo包 `npm install hexo-cli -g`
+* 查看所有全局安装的npm模块 `npm ls -g`
+* 模块的卸载 `npm uninstall module_name`
+* 更新模块 `npm update module_name`
+## 使用hexo
+* sudo npm install hexo -g
+* cd到指定目录hexo init <dir>
+## Ubuntu DNS
+* 刷新dns `sudo /etc/init.d/nscd restart`
+* 需要先安装nscd包 `sudo apt-get install nscd`
